--- a/sbml/templates/register.html
+++ b/sbml/templates/register.html
@@ -39,6 +39,11 @@
                                     {{ form.description.label(class="form-label") }} 
                                     {{ form.description(class="form-control", placeholder="e.g. 'One Shot! One Kill!', 'We are the team with sad stories'", id="description")}} 
                                 </div>
+                                
+                                <div class="col-12 mb-2">
+                                    {{ form.contact_number.label(class="form-label") }} 
+                                    {{ form.contact_number(class="form-control", id="contact_number")}} 
+                                </div>
                                  
                             </div>
                           </div>  
